fix css semicolons, max out findings control z-index

--- a/highlighter.css
+++ b/highlighter.css
@@ -1,9 +1,9 @@
 .findings-highlight {
-    background: rgba(255, 242, 51, 0.3)
+    background: rgba(255, 242, 51, 0.3);
     }
 .findings-highlight.active {
     background: rgba(255, 242, 51, 0.8);
-    border-bottom: none
+    border-bottom: none;
     }
 #findings-control .show_highlight_box {
     display: block;
@@ -14,7 +14,7 @@
     box-sizing: border-box;
     background-size: 100px 40px;
     background-position: -52px -3px;
-    display: none
+    display: none;
     }
 #findings-control .highlighter_box {
     display: block;
@@ -25,12 +25,13 @@
     box-sizing: border-box;
     background-size: 100px 40px;
     background-position: -14px -3px;
-    display: none
+    display: none;
     }
 #findings-control {
     position: fixed;
     top: 20px;
-    right: 0
+    right: 0;
+    z-index: 2147483647;
     }
 #findings-control .logo_container {
     width: 35px;
@@ -38,14 +39,14 @@
     float: left;
     clear: both;
     margin-left: 5px;
-    cursor: pointer
+    cursor: pointer;
     }
 #findings-control .logo_container.active {
     width: 105px;
-    margin-left: -65px
+    margin-left: -65px;
     }
 #findings-control .logo_container.active .show_highlight_box, #findings-control .logo_container.active .highlighter_box {
-    display: block
+    display: block;
     }
 #findings-control #logo {
     background-size: auto 35px;
@@ -59,7 +60,7 @@
     position: relative;
     float: left;
     clear: both;
-    margin-left: 5px
+    margin-left: 5px;
     }
 #findings-control .person_container .name {
     box-sizing: border-box;
@@ -78,7 +79,7 @@
     padding: 2px 4px 0;
     display: none;
     float: left;
-    width: 100%
+    width: 100%;
     }
 #findings-control .person {
     background-size: auto 35px;
@@ -87,12 +88,12 @@
     clear: both;
     box-sizing: border-box;
     background-position: center center;
-    float: left
+    float: left;
     }
 #findings-control .person.highlight {
     border-left: solid 4px #5badd6;
     width: 39px;
-    margin-left: -4px
+    margin-left: -4px;
     }
 #findings-control .quote_box {
     float: left;
@@ -102,10 +103,10 @@
     box-sizing: border-box;
     background-size: 100px 40px;
     background-position: -50px -2px;
-    display: none
+    display: none;
     }
 #findings-control .quote_box:hover, #findings-control .link_box:hover {
-    background-color: #bbb
+    background-color: #bbb;
     }
 #findings-control .link_box {
     display: block;
@@ -116,22 +117,22 @@
     box-sizing: border-box;
     background-size: 100px 40px;
     background-position: -14px -3px;
-    display: none
+    display: none;
     }
 #findings-control .person.active {
     border: solid 3px #5badd6;
     background-size: auto 40px;
-    background-position: center center
+    background-position: center center;
     }
 #findings-control .person_container.active {
     width: 105px;
-    margin-left: -65px
+    margin-left: -65px;
     }
 #findings-control .person_container.active .name {
-    display: block
+    display: block;
     }
 #findings-control .person_container.active .quote_box, #findings-control .person_container.active .link_box {
     display: block;
-    cursor: pointer
+    cursor: pointer;
     }
 
